--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/HTML5">
-				<img src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg"/>
+				<img src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg" alt="HTML5 logo"/>
 				  <h2>HTML5</h2>
 			</a>	  
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">
-				<img src="https://www.lifewire.com/thmb/s9kfBeuaF14VAGgE-SjDB-L0ZDs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/css3-57b597e85f9b58b5c2b338de.png"/>
+				<img src="https://www.lifewire.com/thmb/s9kfBeuaF14VAGgE-SjDB-L0ZDs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/css3-57b597e85f9b58b5c2b338de.png" alt="CSS3 logo"/>
 		          <h2>CSS3</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/JavaScript">
-				<img src="https://farm4.staticflickr.com/3701/19224697601_6b600f21eb_m.jpg"/>
+				<img src="https://farm4.staticflickr.com/3701/19224697601_6b600f21eb_m.jpg" alt="JavaScript logo"/>
 				  <h2>JavaScript</h2>
 			</a>	  
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Cloud9_IDE">
-				<img src="https://cdn-images-1.medium.com/max/1200/1*uc-REJYHbk02nuzVQmDHHQ.png"/>
+				<img src="https://cdn-images-1.medium.com/max/1200/1*uc-REJYHbk02nuzVQmDHHQ.png" alt="Cloud9 logo"/>
 				  <h2>Cloud9</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"/>
+				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git logo"/>
 				 <h2>Git</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4"/>
+				<img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4" alt="Github logo"/>
 				 <h2>Github</h2>
 			</a>
 		</div>
